--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.20.0",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -18,6 +22,7 @@
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
+    "prisma": "^5.20.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
