--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
